--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
     "truffle-contract": "^1.1.11",
-    "web3": "^0.20.0"
+    "web3": "^0.20.7"
   },
   "dependencies": {
     "@babel/core": "^7.2.2",
@@ -37,6 +37,7 @@
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
     "nodemon": "^1.14.12",
+    "onetime": "^3.0.0",
     "python-shell": "^1.0.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
