--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "onetime": "^3.0.0",
     "python-shell": "^1.0.7",
     "react": "^16.7.0",
+    "react-charts": "^2.0.0-alpha.12",
     "react-dom": "^16.7.0",
     "react-geolocated": "^2.4.1",
     "semantic-ui-react": "^0.84.0",
